[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Rafael Isaac <rafael.costa@soultechconsulting.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
Flask = "^2.2.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
telegram = "^0.0.1"
tornado = "^6.3.2"
aiolimiter = "^1.1.0"
APScheduler = "^3.10.1"
cachetools = "^5.3.1"
cryptography = "^41.0.3"
httpx = "^0.24.1"
pytz = "^2023.3"
python-telegram-bot = "20.4"
BingTranslator = "^0.1"
deep-translator = "^1.11.4"
environs = "^9.5.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
urllib3 = "1.26.15"
poetry = {url="https://storage.googleapis.com/poetry-bundles/poetry-1.1.15-py2.py3-none-any.whl"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"